[package]
name = "lotus-api"
version = "0.1.0"
authors = ["kayryu <lukayryu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
derive_more = "0.99.1"
async-trait = "0.1"
serde_json = "1.0"
jsonrpc-core = "14.2.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2.5", features = ["macros"] }

cid = { version = "0.5.1" }
num-bigint = "0.3.0"