[package]
name = "lotus-api"
version = "0.1.0"
authors = ["kayryu <lukayryu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11"
log = "0.4.8"
derive_more = "0.99"
async-trait = "0.1"
serde_json = "1.0"
jsonrpc-core = "14.0"
thiserror = "1.0"
data-encoding = "2.2"
unsigned-varint = "0.3"
libsecp256k1 = "0.3"
serde_repr = "0.1"
blake2b_simd = "0.5"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2.5", features = ["macros"] }

cid = "0.5.1"
num-bigint = "0.3.0"
fixed-hash = "0.6"

libp2p-core = "0.16.0"